...
                                                <connections>
                                                    <outlet property="delegate" destination="SUt-8k-fb9" id="PcA-h0-307"/>
                                                </connections>
                                            </textField>
                                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="loginButtonID" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ean-Tz-Yi3">
                                                <rect key="frame" x="30" y="173" width="253" height="30"/>
                                                <state key="normal" title="Login"/>
                                                <connections>
                                                    <action selector="loginAction:" destination="SUt-8k-fb9" eventType="touchUpInside" id="aXG-AO-K2a"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
